[package]
name = "some-sign-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.24"
delay_timer = "0.11.4"
reqwest = "0.11.14"
serde = {version="1.0.160", features=["derive"]}
serde_json = "1"
tokio = {version="1.26.0", features = ["full"] }
tokio-test = "0.4.2"
toml = "0.7.3"
